atualiza pom.xml

--- a/Lista01/Questão01/pom.xml
+++ b/Lista01/Questão01/pom.xml
@@ -19,6 +19,9 @@
             </plugin>
         </plugins>
     </build>
-
+    
+    <properties>
+        <exec.mainClass>questao1.ThreadsExample</exec.mainClass>
+    </properties>
 
 </project>
