--- a/Lista01/Questão02/pom.xml
+++ b/Lista01/Questão02/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>questao02</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <exec.mainClass>questao2.CountDownLatchDemo</exec.mainClass>
+    </properties>
+
     
 </project>
